CRS, DTM, map2model, QLD updates
1. CRS explicitly applied to all new shapeffiles
2. DTM download retries 100 times before failing
3. map2model exposed choice of age definition
4. QLD demo datasets added

--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -43,8 +43,8 @@
     "import os\n",
     "\n",
     "# load last saved map area and mdoe engine (if they exist)\n",
-    "if(os.path.isfile('../last_choices2.txt')):\n",
-    "    f=open('../last_choices2.txt','r')\n",
+    "if(os.path.isfile('../last_choices.txt')):\n",
+    "    f=open('../last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
     "    f.close()\n",
     "    default_map=contents[0].replace(\"\\n\",\"\")\n",
@@ -53,7 +53,7 @@
     "    default_map='Turner_Syncline'\n",
     "    default_engine='loopstructural'\n",
     "\n",
-    "options=['test_data3','Turner_Syncline','Draw Your Own']\n",
+    "options=['test_data3','Turner_Syncline','Draw Your Own','Last Area Drawn']\n",
     "\n",
     "if(not default_map in options):\n",
     "    default_map= options[0]\n",
@@ -75,7 +75,7 @@
    "source": [
     "test_data_name=map_choice.value\n",
     "print(test_data_name)\n",
-    "if(not test_data_name =='Draw Your Own'):\n",
+    "if(not test_data_name =='Draw Your Own' and not test_data_name =='Last Area Drawn'):\n",
     "    test_data_path='../'+test_data_name+'/'\n",
     "\n",
     "    os.chdir(test_data_path)\n",
@@ -104,7 +104,15 @@
     "\n",
     "\n",
     "if(not test_data_name =='Draw Your Own'):\n",
+    "    if(test_data_name=='Last Area Drawn'):\n",
+    "        last_coords=pd.read_csv('../last_area.csv')\n",
+    "        display(last_coords)\n",
+    "        minx=last_coords.iloc[0]['minx']\n",
+    "        miny=last_coords.iloc[0]['miny']\n",
+    "        maxx=last_coords.iloc[0]['maxx']\n",
+    "        maxy=last_coords.iloc[0]['maxy']\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
+    "    dst_crs = \"epsg:28350\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "\n",
     "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "    y_point_list = [miny, miny, maxy, maxy, maxy]\n",
@@ -203,21 +211,22 @@
    },
    "outputs": [],
    "source": [
-    "if(test_data_name=='Draw Your Own'):\n",
+    "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn'):\n",
+    "    if(test_data_name=='Draw Your Own'):\n",
+    "        new_poly=GeoJSON(data=dc.last_draw)\n",
+    "        new_poly=str(new_poly)\n",
     "\n",
-    "    new_poly=GeoJSON(data=dc.last_draw)\n",
-    "    new_poly=str(new_poly)\n",
-    "\n",
-    "    if(\"'geometry': None\" in new_poly):\n",
-    "        raise NameError('map2loop error: No rectangle selected')\n",
-    "    new_poly=new_poly.rsplit(\"'coordinates': \", 1)[1]\n",
-    "    new_poly=new_poly.replace('[[[','').replace('[','').replace(']]]}})','').replace('],','').replace(',','').split(\" \")\n",
-    "    longs=new_poly[0::2]\n",
-    "    lats=new_poly[1::2]\n",
-    "    minlong=float(min(longs))\n",
-    "    maxlong=float(max(longs))\n",
-    "    minlat=float(max(lats)) #ignores sign\n",
-    "    maxlat=float(min(lats)) #ignores sign\n",
+    "        if(\"'geometry': None\" in new_poly):\n",
+    "            raise NameError('map2loop error: No rectangle selected')\n",
+    "        new_poly=new_poly.rsplit(\"'coordinates': \", 1)[1]\n",
+    "        new_poly=new_poly.replace('[[[','').replace('[','').replace(']]]}})','').replace('],','').replace(',','').split(\" \")\n",
+    "        longs=new_poly[0::2]\n",
+    "        lats=new_poly[1::2]\n",
+    "        minlong=float(min(longs))\n",
+    "        maxlong=float(max(longs))\n",
+    "        minlat=float(max(lats)) #ignores sign\n",
+    "        maxlat=float(min(lats)) #ignores sign\n",
+    "        \n",
     "    bounds=(minlong,maxlong,minlat,maxlat)\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "    dst_crs = \"epsg:28350\" # coordinate system for example data\n",
@@ -229,7 +238,15 @@
     "    mbbox = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[bbox_geom]) \n",
     "    print(src_crs,mbbox.total_bounds)\n",
     "    mbbox=mbbox.to_crs(dst_crs)\n",
-    "    print(dst_crs,mbbox.total_bounds)"
+    "    print(dst_crs,mbbox.total_bounds)\n",
+    "    \n",
+    "    f=open('../last_area.csv','w') \n",
+    "    ostr='minx,miny,maxx,maxy\\n'\n",
+    "    f.write(ostr)\n",
+    "    ostr=str(mbbox.total_bounds[0])+','+str(mbbox.total_bounds[1])+','+str(mbbox.total_bounds[2])+','+str(mbbox.total_bounds[3])+'\\n'\n",
+    "    f.write(ostr)\n",
+    "    f.close()\n",
+    "    "
    ]
   },
   {
@@ -272,7 +289,7 @@
     "workflow={'model_engine':engine_choice.value} \n",
     "print(workflow['model_engine'])\n",
     "# save last map and engine choices\n",
-    "f=open('../last_choices2.txt','w') \n",
+    "f=open('../last_choices.txt','w') \n",
     "ostr=str(map_choice.value)+'\\n'+str(engine_choice.value)+'\\n'\n",
     "f.write(ostr)\n",
     "f.close()"
@@ -341,7 +358,7 @@
    },
    "outputs": [],
    "source": [
-    "if(test_data_name=='Draw Your Own'):\n",
+    "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn' ):\n",
     "    test_data_path='../scratch/'\n",
     "    minx=mbbox.total_bounds[0]\n",
     "    maxx=mbbox.total_bounds[2]\n",
@@ -424,7 +441,7 @@
     "#\n",
     "#############################################\n",
     "workflow={'model_engine':engine_choice.value} \n",
-    "\n",
+    "c_l[\"intrusive\"]= 'granitic'\n",
     "if(workflow['model_engine']=='geomodeller'):\n",
     "    workflow.update( {'seismic_section':False,\n",
     "          'cover_map':False,\n",
@@ -602,7 +619,7 @@
    "outputs": [],
    "source": [
     "misorientation=30\n",
-    "super_groups,use_gcode3=m2l_topology.super_groups_and_groups(group_girdle,tmp_path,misorientation)\n"
+    "super_groups,use_gcode3=m2l_topology.super_groups_and_groups(group_girdle,tmp_path,misorientation)"
    ]
   },
   {
@@ -869,7 +886,7 @@
    },
    "outputs": [],
    "source": [
-    "m2l_topology.save_Parfile(m2m_cpp_path,c_l,graph_path,geology_file_csv,fault_file_csv,structure_file_csv,mindep_file_csv,minx,maxx,miny,maxy,500.0,'Fe,Cu,Au,NONE')\n"
+    "m2l_topology.save_Parfile(m2m_cpp_path,c_l,graph_path,geology_file_csv,fault_file_csv,structure_file_csv,mindep_file_csv,minx,maxx,miny,maxy,500.0,'Fe,Cu,Au,NONE',2)\n"
    ]
   },
   {
@@ -1062,7 +1079,18 @@
     "\n",
     "print(minlong,maxlong,minlat,maxlat)\n",
     "#if(((not os.path.exists(dtm_file)) or (not local_paths)) and net):    \n",
-    "m2l_utils.get_dtm(dtm_file, minlong,maxlong,minlat,maxlat)\n",
+    "downloaded = False\n",
+    "i=0\n",
+    "while downloaded == False:\n",
+    "    try:\n",
+    "        m2l_utils.get_dtm(dtm_file, minlong,maxlong,minlat,maxlat)\n",
+    "        downloaded=True\n",
+    "    except:\n",
+    "        time.sleep(10)\n",
+    "        i=i+1\n",
+    "if(i==100):\n",
+    "    raise NameError('map2loop error: Could not access DTM server after 100 attempts')\n",
+    "\n",
     "geom_rp=m2l_utils.reproject_dtm(dtm_file,dtm_reproj_file,src_crs,dst_crs)\n",
     "\n",
     "dtm = rasterio.open(dtm_reproj_file)\n",
@@ -1181,36 +1209,22 @@
     "bbox_geom = Polygon(zip(x_point_list, y_point_list))\n",
     "\n",
     "polygo = gpd.GeoDataFrame(index=[0], crs=dst_crs, geometry=[bbox_geom]) \n",
-    "#display(polygo.geometry)\n",
     "is_bed=structure_code[c_l['sf']].str.contains(c_l['bedding'], regex=False) \n",
     "    \n",
     "structure_clip = structure_code[is_bed]\n",
+    "structure_clip.crs = dst_crs\n",
     "\n",
     "if(workflow['fold_axial_traces']):\n",
     "    folds_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fold'])]\n",
-    "    #folds_clip=m2l_utils.clip_shp(all_folds,polygo)\n",
+    "    folds_clip.crs = dst_crs\n",
     "    if(len(folds_clip)>0):\n",
     "        folds_clip.to_file(tmp_path+'folds_clip.shp')\n",
-    "\n",
-    "\n",
-    "#all_faults=faults[faults[c_l['f']].str.contains(c_l['fault'])]\n",
-    "\n",
-    "\n",
-    "#geol_clip=gpd.overlay(geology, polygo, how='intersection')\n",
-    "#faults_clip=m2l_utils.clip_shp(all_faults,polygo)\n",
-    "\n",
-    "#structure_clip = m2l_utils.clip_shp(all_beds, polygo)\n",
-    "\n",
-    "#base = geol_clip.plot(column=c_l['c'],figsize=(7,7),edgecolor='#000000',linewidth=0.2)\n",
-    "#faults_clip.plot(ax=base, column=c_l['f'],edgecolor='black')\n",
-    "#structure_clip.plot(ax=base, column=c_l['c'],edgecolor='black')\n",
     "\n",
     "\n",
     "if(c_l['dd']=='strike'):\n",
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
     "    \n",
-    "#geol_clip.to_file(tmp_path+'geol_clip.shp')\n",
     "\n",
     "structure_clip.to_file(tmp_path+'structure_clip.shp')\n"
    ]
@@ -2060,7 +2074,7 @@
     "                                                              fault_params=fault_params,\n",
     "                                                              foliation_params=foliation_params)\n",
     "  \n",
-    "    view = LavaVuModelViewer(model,vertical_exaggeration=2) \n",
+    "    view = LavaVuModelViewer(model,vertical_exaggeration=1) \n",
     "    view.nsteps = np.array([200,200,200])\n",
     "    #view.set_zscale(2)\n",
     "    view.add_model(cmap='tab20')\n",
@@ -2163,125 +2177,6 @@
     "        m2l_export.loop2gempy(test_data_name,tmp_path,vtk_path,output_path+'orientations_clean.csv',\n",
     "                                output_path+'contacts_clean.csv',tmp_path+'groups_clean.csv',\n",
     "                                bbox,model_base, model_top,vtk,dtm_reproj_file)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def richard_loop2gempy(test_data_name,tmp_path,vtk_path,orientations_file,\n",
-    "                                contacts_file,groups_file,\n",
-    "                                bbox,model_base, model_top,vtk,dtm_reproj_file):\n",
-    "    import gempy as gp\n",
-    "    from gempy import plot\n",
-    "    print(\"this one running\")\n",
-    "    verbose=True\n",
-    "    compute=True\n",
-    "    geo_model = gp.create_model(test_data_name)\n",
-    "\n",
-    "    # If depth coordinates are much smaller than XY the whole system of equations becomes very unstable. Until\n",
-    "    # I fix it properly in gempy this is a handcrafted hack\n",
-    "    va=None\n",
-    "    if va is None:\n",
-    "        va = (float(bbox[0]) - float(bbox[2])) / (model_base - model_top)/2\n",
-    "\n",
-    "        if va < 3:\n",
-    "            va = 0\n",
-    "        else:\n",
-    "            print('The vertical exageration is: ', va)\n",
-    "\n",
-    "    gp.init_data(geo_model, extent=[bbox[0], bbox[2], bbox[1], bbox[3], model_base * va, model_top * va],\n",
-    "                 resolution=(50, 50, 50),\n",
-    "                 path_o=orientations_file,\n",
-    "                 path_i=contacts_file)\n",
-    "\n",
-    "    geo_model.modify_surface_points(geo_model.surface_points.df.index, Z=geo_model.surface_points.df['Z'] * va)\n",
-    "\n",
-    "    if dtm_reproj_file is not None:\n",
-    "    #if dtm_reproj_file is None:\n",
-    "        # Load reprojected topography to model\n",
-    "\n",
-    "        fp = dtm_reproj_file\n",
-    "        geo_model.set_topography(source='gdal', filepath=fp)\n",
-    "        #geo_model.set_topography()\n",
-    "        #geo_model.set_topography(source='random')\n",
-    "\n",
-    "        print(\"va\", va, \"fp\",fp)\n",
-    "        print(type(geo_model.grid))\n",
-    "        # Rescaling topography:\n",
-    "        #print(\"tv b4\", geo_model.grid.topography.shape)\n",
-    "        ####geo_model.grid.topography.values[:, 2] *= va\n",
-    "        geo_model._grid.topography.values[:, 2] *= va\n",
-    "        #print(\"va\", geo_model.grid.topography.values)\n",
-    "        ####geo_model.grid.update_grid_values()\n",
-    "        ####geo_model.update_from_grid()\n",
-    "        geo_model._grid.update_grid_values()\n",
-    "        geo_model.update_from_grid()\n",
-    "\n",
-    "    # Pile processing:\n",
-    "    print(groups_file)\n",
-    "    contents = np.genfromtxt(groups_file,\n",
-    "                             delimiter=';', dtype='U100')\n",
-    "\n",
-    "    # Init dictionary Series:Surfaces\n",
-    "    map_series_to_surfaces = {}\n",
-    "    choice = 0\n",
-    "    for group in contents:\n",
-    "        # Reading surfaces groups\n",
-    "        #surfaces_g = np.atleast_2d(np.genfromtxt(tmp_path + group + '.csv', delimiter=',', dtype='U100'))\n",
-    "        print(group)\n",
-    "\n",
-    "        surfaces_g = np.atleast_2d(np.genfromtxt(tmp_path + group + '.csv', delimiter=';', dtype='U100'))\n",
-    "        print(surfaces_g)\n",
-    "\n",
-    "        # Check if there are several choices\n",
-    "        if surfaces_g.shape[1] > 1:\n",
-    "            surfaces_g = surfaces_g[choice]\n",
-    "        # Deleting the first element since it is not a surface\n",
-    "        surfaces_g = surfaces_g[1:]\n",
-    "        # Creating the mapping dictionary\n",
-    "        map_series_to_surfaces[group] = surfaces_g.tolist()\n",
-    "\n",
-    "    if verbose is True:\n",
-    "        print(map_series_to_surfaces)\n",
-    "\n",
-    "    # Setting pile to model\n",
-    "    gp.map_series_to_surfaces(geo_model, map_series_to_surfaces, remove_unused_series=False)\n",
-    "\n",
-    "    if('Default series' in map_series_to_surfaces):\n",
-    "\n",
-    "        #    Removing related data\n",
-    "        del_surfaces = geo_model.surfaces.df.groupby('series').get_group('Default series')['surface']\n",
-    "        geo_model.delete_surfaces(del_surfaces, remove_data=True)\n",
-    "\n",
-    "        # Removing series that have not been mapped to any surface\n",
-    "        geo_model.delete_series('Default series')\n",
-    "\n",
-    "    if compute is True:\n",
-    "        gp.set_interpolator(geo_model, theano_optimizer='fast_run', dtype='float64')\n",
-    "        gp.compute_model(geo_model)\n",
-    "\n",
-    "    # Visualise Model\n",
-    "    p3d = gp.plot_3d(geo_model, plotter_type='background', notebook=False)\n",
-    "\n",
-    "    p3d3 = gp.plot_3d(geo_model, notebook=True)\n",
-    "\n",
-    "\n",
-    "    # Save model as vtk\n",
-    "    if vtk:\n",
-    "        vtkexp = gp._plot.export_to_vtk(geo_model, path=vtk_path, name=test_data_name + '.vtk', voxels=False, block=None,\n",
-    "                              surfaces=True)\n",
-    "\n",
-    "    return geo_model\n",
-    "\n",
-    "if(workflow['model_engine']=='gempy'):\n",
-    "    vtk = False\n",
-    "\n",
-    "    richard_loop2gempy(test_data_name,tmp_path,vtk_path,output_path+'orientations_clean.csv',\n",
-    "                                output_path+'contacts_clean.csv',tmp_path+'groups_clean.csv',\n",
-    "                                bbox,model_base, model_top,vtk,dtm_reproj_file)"
    ]
   },
   {
