--- a/notebooks/2. QLD map processing.ipynb
+++ b/notebooks/2. QLD map processing.ipynb
@@ -711,7 +711,7 @@
    },
    "outputs": [],
    "source": [
-    "m2l_topology.save_Parfile(m2m_cpp_path,c_l,graph_path,geology_file_csv,fault_file_csv,structure_file_csv,mindep_file_csv,minx,maxx,miny,maxy,500.0,'Fe,Cu,Au,NONE')\n"
+    "m2l_topology.save_Parfile(m2m_cpp_path,c_l,graph_path,geology_file_csv,fault_file_csv,structure_file_csv,mindep_file_csv,minx,maxx,miny,maxy,500.0,'Fe,Cu,Au,NONE',2)\n"
    ]
   },
   {
@@ -904,7 +904,18 @@
     "\n",
     "print(minlong,maxlong,minlat,maxlat)\n",
     "#if(((not os.path.exists(dtm_file)) or (not local_paths)) and net):    \n",
-    "m2l_utils.get_dtm(dtm_file, minlong,maxlong,minlat,maxlat)\n",
+    "downloaded = False\n",
+    "i=0\n",
+    "while downloaded == False:\n",
+    "    try:\n",
+    "        m2l_utils.get_dtm(dtm_file, minlong,maxlong,minlat,maxlat)\n",
+    "        downloaded=True\n",
+    "    except:\n",
+    "        time.sleep(10)\n",
+    "        i=i+1\n",
+    "if(i==100):\n",
+    "    raise NameError('map2loop error: Could not access DTM server after 100 attempts')\n",
+    "\n",
     "geom_rp=m2l_utils.reproject_dtm(dtm_file,dtm_reproj_file,src_crs,dst_crs)\n",
     "\n",
     "dtm = rasterio.open(dtm_reproj_file)\n",
@@ -1023,36 +1034,22 @@
     "bbox_geom = Polygon(zip(x_point_list, y_point_list))\n",
     "\n",
     "polygo = gpd.GeoDataFrame(index=[0], crs=dst_crs, geometry=[bbox_geom]) \n",
-    "#display(polygo.geometry)\n",
     "is_bed=structure_code[c_l['sf']].str.contains(c_l['bedding'], regex=False) \n",
     "    \n",
     "structure_clip = structure_code[is_bed]\n",
+    "structure_clip.crs = dst_crs\n",
     "\n",
     "if(workflow['fold_axial_traces']):\n",
     "    folds_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fold'])]\n",
-    "    #folds_clip=m2l_utils.clip_shp(all_folds,polygo)\n",
+    "    folds_clip.crs = dst_crs\n",
     "    if(len(folds_clip)>0):\n",
     "        folds_clip.to_file(tmp_path+'folds_clip.shp')\n",
-    "\n",
-    "\n",
-    "#all_faults=faults[faults[c_l['f']].str.contains(c_l['fault'])]\n",
-    "\n",
-    "\n",
-    "#geol_clip=gpd.overlay(geology, polygo, how='intersection')\n",
-    "#faults_clip=m2l_utils.clip_shp(all_faults,polygo)\n",
-    "\n",
-    "#structure_clip = m2l_utils.clip_shp(all_beds, polygo)\n",
-    "\n",
-    "#base = geol_clip.plot(column=c_l['c'],figsize=(7,7),edgecolor='#000000',linewidth=0.2)\n",
-    "#faults_clip.plot(ax=base, column=c_l['f'],edgecolor='black')\n",
-    "#structure_clip.plot(ax=base, column=c_l['c'],edgecolor='black')\n",
     "\n",
     "\n",
     "if(c_l['dd']=='strike'):\n",
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
     "    \n",
-    "#geol_clip.to_file(tmp_path+'geol_clip.shp')\n",
     "\n",
     "structure_clip.to_file(tmp_path+'structure_clip.shp')\n"
    ]
