--- a/notebooks/2. QLD leaflet example.ipynb
+++ b/notebooks/2. QLD leaflet example.ipynb
@@ -43,8 +43,8 @@
     "import os\n",
     "\n",
     "# load last saved map area and mdoe engine (if they exist)\n",
-    "if(os.path.isfile('../last_choices2.txt')):\n",
-    "    f=open('../last_choices2.txt','r')\n",
+    "if(os.path.isfile('../qld_src_data/last_choices2.txt')):\n",
+    "    f=open('../qld_src_data/last_choices2.txt','r')\n",
     "    contents =f.readlines()\n",
     "    f.close()\n",
     "    default_map=contents[0].replace(\"\\n\",\"\")\n",
@@ -105,7 +105,7 @@
     "\n",
     "if(not test_data_name =='Draw Your Own'):\n",
     "    if(test_data_name=='Last Area Drawn'):\n",
-    "        last_coords=pd.read_csv('../last_area2.csv')\n",
+    "        last_coords=pd.read_csv('../qld_src_data/last_area2.csv')\n",
     "        display(last_coords)\n",
     "        minx=last_coords.iloc[0]['minx']\n",
     "        miny=last_coords.iloc[0]['miny']\n",
@@ -242,7 +242,7 @@
     "    mbbox=mbbox.to_crs(dst_crs)\n",
     "    print(dst_crs,mbbox.total_bounds)\n",
     "    \n",
-    "    f=open('../last_area2.csv','w') \n",
+    "    f=open('../qld_src_data/last_area2.csv','w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
     "    ostr=str(mbbox.total_bounds[0])+','+str(mbbox.total_bounds[1])+','+str(mbbox.total_bounds[2])+','+str(mbbox.total_bounds[3])+'\\n'\n",
@@ -293,7 +293,7 @@
     "workflow={'model_engine':engine_choice.value} \n",
     "print(workflow['model_engine'])\n",
     "# save last map and engine choices\n",
-    "f=open('../last_choices2.txt','w') \n",
+    "f=open('../qld_src_data/last_choices2.txt','w') \n",
     "ostr=str(map_choice.value)+'\\n'+str(engine_choice.value)+'\\n'\n",
     "f.write(ostr)\n",
     "f.close()"
