Improve cycle removal for units using ASUD data, and fix typos in ASUD variable

--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -1124,7 +1124,7 @@
    "outputs": [],
    "source": [
     "groups,glabels,G = m2l_topology.get_series(strat_graph_file,'id')\n",
-    "m2l_topology.save_units(G,tmp_path,glabels)"
+    "m2l_topology.save_units(G,tmp_path,glabels,Australia)"
    ]
   },
   {
