--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -952,7 +952,7 @@
    "source": [
     "groups,glabels,G = m2l_topology.get_series(strat_graph_file,'id')\n",
     "display(groups,glabels,G.nodes,G.edges)\n",
-    "m2l_topology.save_units(G,tmp_path,glabels)"
+    "m2l_topology.save_units(G,tmp_path,glabels,Australia)"
    ]
   },
   {
