remove  gdal import

--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -49,7 +49,7 @@
     "    default_map='test_data3'\n",
     "    default_engine='loopstructural'\n",
     "\n",
-    "options=['test_data3','Turner_Syncline']\n",
+    "options=['Turner_Syncline','test_data3']\n",
     "\n",
     "if(not default_map in options):\n",
     "    default_map= options[0]\n",
