--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -1923,9 +1923,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voxels saved as ../Turner_Syncline/tmp/voxels.raw\n"
+     ]
+    }
+   ],
    "source": [
     "if(workflow['model_engine']=='loopstructural'):  \n",
     "    voxel_size=500\n",
@@ -1948,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:38:31.327540Z",
@@ -1987,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:38:31.378548Z",
@@ -2059,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:38:31.412547Z",
