--- a/notebooks/2. QLD leaflet example.ipynb
+++ b/notebooks/2. QLD leaflet example.ipynb
@@ -509,7 +509,7 @@
     "    cover_map_path=data_path+'Young_Cover_FDS_MGA_clean.shp' #obviously hard-wired for the moment\n",
     "    dtb_clip=output_path+'young_cover_grid_clip.tif' #obviously hard-wired for the moment\n",
     "    cover_dip=10 # dip of cover away from contact\n",
-    "    spacing=5000 # of contact grid in metres"
+    "    cover_spacing=5000 # of contact grid in metres"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_file,geology_file,fault_file,mindep_file=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,tmp_path,bbox,c_l,dst_crs,local_paths)"
+    "structure_file,geology_file,fault_file,mindep_file,fold_file=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths)"
    ]
   },
   {
@@ -853,10 +853,14 @@
    },
    "outputs": [],
    "source": [
-    "lines_ll=gpd.read_file(fault_file,bbox=bbox)\n",
+    "if(os.path.exists(fault_file)):\n",
+    "    lines_ll=gpd.read_file(fault_file,bbox=bbox)\n",
     "\n",
-    "base2=lines_ll.plot(cmap='rainbow',column=c_l['f'],figsize=(10,10),linewidth=0.4)\n",
-    "polygon.plot(ax=base2, color='none',edgecolor='black')\n"
+    "    sub_lines = lines_ll[['geometry', c_l['o'],c_l['f']]]\n",
+    "    base=sub_lines.plot()\n",
+    "    polygon.plot(ax=base, color='none',edgecolor='black')\n",
+    "else:\n",
+    "    sub_lines=[]\n"
    ]
   },
   {
@@ -880,7 +884,6 @@
    },
    "outputs": [],
    "source": [
-    "sub_lines = lines_ll[['geometry', c_l['o'],c_l['f']]]\n",
     "m2l_topology.save_faults_wkt(sub_lines,fault_file_csv,c_l)"
    ]
   },
@@ -955,7 +958,7 @@
    "outputs": [],
    "source": [
     "if(Australia):\n",
-    "    asud_strat_file='../source_data/USAD.csv'\n",
+    "    asud_strat_file='../source_data/ASUD.csv'\n",
     "    m2l_topology.use_asud(strat_graph_file, asud_strat_file,graph_path)\n",
     "    strat_graph_file=graph_path+'ASUD_strat.gml'\n"
    ]
@@ -1097,24 +1100,27 @@
     "maxlat=polygon_ll.total_bounds[3]+step_out\n",
     "\n",
     "print(minlong,maxlong,minlat,maxlat)\n",
-    "#if(((not os.path.exists(dtm_file)) or (not local_paths)) and net):  \n",
-    "\n",
     "downloaded = False\n",
     "i=0\n",
-    "while downloaded == False and i < 100:\n",
+    "print('Attempt: 0 ',end='')\n",
+    "while downloaded == False:\n",
     "    try:\n",
     "        m2l_utils.get_dtm(dtm_file, minlong,maxlong,minlat,maxlat)\n",
     "        downloaded=True\n",
     "    except:\n",
     "        time.sleep(10)\n",
     "        i=i+1\n",
+    "        print(' ',i,end='')\n",
     "if(i==100):\n",
     "    raise NameError('map2loop error: Could not access DTM server after 100 attempts')\n",
+    "print()\n",
+    "\n",
     "geom_rp=m2l_utils.reproject_dtm(dtm_file,dtm_reproj_file,src_crs,dst_crs)\n",
     "\n",
     "dtm = rasterio.open(dtm_reproj_file)\n",
     "pyplot.imshow(dtm.read(1), cmap='terrain',vmin=0,vmax=1000)\n",
-    "pyplot.show()"
+    "pyplot.show()\n",
+    "\n"
    ]
   },
   {
@@ -1159,7 +1165,7 @@
    },
    "outputs": [],
    "source": [
-    "m2l_topology.save_units(G,tmp_path,glabels,Australia)"
+    "m2l_topology.save_units(G,tmp_path,glabels,Australia,asud_strat_file)"
    ]
   },
   {
@@ -1198,8 +1204,9 @@
     "structure = gpd.read_file(structure_file,bbox=bbox)\n",
     "structure.crs=dst_crs\n",
     "print(fault_file)\n",
-    "faults_clip = gpd.read_file(fault_file,bbox=bbox)\n",
-    "faults_clip.crs=dst_crs\n",
+    "if(os.path.exists(fault_file)):\n",
+    "    faults_clip = gpd.read_file(fault_file,bbox=bbox)\n",
+    "    faults_clip.crs=dst_crs\n",
     "\n",
     "sub_pts = structure[['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]] \n",
     "\n",
@@ -1249,7 +1256,7 @@
     "structure_clip = structure_code[is_bed]\n",
     "structure_clip.crs = dst_crs\n",
     "\n",
-    "if(workflow['fold_axial_traces']):\n",
+    "if(workflow['fold_axial_traces'] and os.path.exists(fault_file)):\n",
     "    folds_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fold'])]\n",
     "    folds_clip.crs = dst_crs\n",
     "    if(len(folds_clip)>0):\n",
@@ -1335,7 +1342,7 @@
     "\n",
     "    dtb = rasterio.open(dtb_clip)\n",
     "    \n",
-    "    m2l_geometry.process_cover(output_path,dtm,dtb,dtb_null,cover,workflow['cover_map'],cover_dip,bbox,dst_crs,spacing,contact_decimate=3,use_vector=True,use_grid=True)    \n",
+    "    m2l_geometry.process_cover(output_path,dtm,dtb,dtb_null,cover,workflow['cover_map'],cover_dip,bbox,dst_crs,cover_spacing,contact_decimate=3,use_vector=True,use_grid=True)    \n",
     "    "
    ]
   },
@@ -1677,14 +1684,13 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "faults=pd.read_csv(output_path+'faults.csv')\n",
-    "faults_len=len(faults)\n",
+    "if(os.path.exists(fault_file)):\n",
+    "    faults=pd.read_csv(output_path+'faults.csv')\n",
+    "    faults_len=len(faults)\n",
     "\n",
-    "if(faults_len>0):\n",
-    "    m2l_interpolation.process_fault_throw_and_near_faults_from_grid(tmp_path,output_path,dtm_reproj_file,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,bbox,\n",
-    "                                                                scheme,dip_grid,dip_dir_grid,x,y,spacing)\n",
-    "\n",
-    "    m2l_utils.plot_points(output_path+'fault_displacements3.csv',geol_clip, 'apparent_displacement','X','Y',True,'numeric')\n"
+    "    if(faults_len>0):\n",
+    "        m2l_interpolation.process_fault_throw_and_near_faults_from_grid(tmp_path,output_path,dtm_reproj_file,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,bbox,\n",
+    "                                                                scheme,dip_grid,dip_dir_grid,x,y,spacing)\n"
    ]
   },
   {
@@ -1873,16 +1879,17 @@
    },
    "outputs": [],
    "source": [
-    "if(workflow['fold_axial_traces']   and len(folds_clip)>0):\n",
+    "if(workflow['fold_axial_traces']   and  os.path.exists(fold_file)):\n",
+    "    if(len(folds_clip)>0):\n",
     "\n",
-    "    m2l_geometry.save_fold_axial_traces(tmp_path+'folds_clip.shp',output_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,fold_decimate)\n",
+    "        m2l_geometry.save_fold_axial_traces(tmp_path+'folds_clip.shp',output_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,fold_decimate)\n",
     "\n",
-    "    #Save fold axial trace near-hinge orientations\n",
-    "    fat_step=750         # how much to step out normal to fold axial trace\n",
-    "    close_dip=-999       #dip to assign to all new orientations (-999= use local interpolated dip)\n",
+    "        #Save fold axial trace near-hinge orientations\n",
+    "        fat_step=750         # how much to step out normal to fold axial trace\n",
+    "        close_dip=-999       #dip to assign to all new orientations (-999= use local interpolated dip)\n",
     "\n",
-    "    m2l_geometry.save_fold_axial_traces_orientations(tmp_path+'folds_clip.shp',output_path,tmp_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,\n",
-    "                                                     fold_decimate,fat_step,close_dip,scheme,bbox,spacing,dip_grid,dip_dir_grid)\n"
+    "        m2l_geometry.save_fold_axial_traces_orientations(tmp_path+'folds_clip.shp',output_path,tmp_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,\n",
+    "                                                         fold_decimate,fat_step,close_dip,scheme,bbox,spacing,dip_grid,dip_dir_grid)\n"
    ]
   },
   {
@@ -1961,14 +1968,15 @@
    },
    "outputs": [],
    "source": [
-    "if(workflow['strat_offset']):\n",
+    "if(workflow['strat_offset'] and os.path.exists(fault_file)):\n",
     "    fault_test=pd.read_csv(output_path+'fault_dimensions.csv',',')\n",
     "    if(len(fault_test)>0):\n",
-    "        m2l_geometry.fault_strat_offset(output_path,c_l,dst_crs,output_path+'formation_summary_thicknesses.csv', tmp_path+'all_sorts.csv',tmp_path+'faults_clip.shp',tmp_path+'geol_clip.shp',output_path+'fault_dimensions.csv')\n",
+    "\n",
+    "    m2l_geometry.fault_strat_offset(output_path,c_l,dst_crs,output_path+'formation_summary_thicknesses.csv', tmp_path+'all_sorts.csv',tmp_path+'faults_clip.shp',tmp_path+'geol_clip.shp',output_path+'fault_dimensions.csv')\n",
     "\n",
     "\n",
-    "        m2l_utils.plot_points(output_path+'fault_strat_offset3.csv',geol_clip,'min_offset','X','Y',True,'numeric')\n",
-    "        m2l_utils.plot_points(output_path+'fault_strat_offset3.csv',geol_clip,'strat_offset','X','Y',True,'numeric')\n"
+    "    m2l_utils.plot_points(output_path+'fault_strat_offset3.csv',geol_clip,'min_offset','X','Y',True,'numeric')\n",
+    "    m2l_utils.plot_points(output_path+'fault_strat_offset3.csv',geol_clip,'strat_offset','X','Y',True,'numeric')"
    ]
   },
   {
@@ -1992,8 +2000,7 @@
    },
    "outputs": [],
    "source": [
-    "fault_test=pd.read_csv(output_path+'fault_dimensions.csv',',')\n",
-    "if(len(fault_test)>0):\n",
+    "if(os.path.exists(fault_file)):\n",
     "    m2l_topology.parse_fault_relationships(graph_path,tmp_path,output_path)"
    ]
   },
@@ -2105,11 +2112,34 @@
     "                        'buffer':0.8,  # how much to extend nterpolation around box\n",
     "                        'solver':'pyamg',\n",
     "                        'damp':True}\n",
-    "    model, m2l_data = GeologicalModel.from_map2loop_directory(test_data_path,\n",
+    "\n",
+    "    if(not os.path.exists(fault_file)):\n",
+    "        f=open(output_path + '/fault_displacements3.csv','w')\n",
+    "        f.write('X,Y,fname,apparent_displacement,vertical_displacement,downthrow_dir\\n')\n",
+    "        f.close()\n",
+    "        f=open(output_path + '/fault_orientations.csv','w')\n",
+    "        f.write('X,Y,Z,DipDirection,dip,DipPolarity,formation\\n')\n",
+    "        f.close()\n",
+    "        f=open(output_path + '/faults.csv','w')\n",
+    "        f.write('X,Y,Z,formation\\n')\n",
+    "        f.close()\n",
+    "        f=open(output_path + '/fault-fault-relationships.csv','w')\n",
+    "        f.write('fault_id\\n')\n",
+    "        f.close()\n",
+    "        f=open(output_path + '/group-fault-relationships.csv','w')\n",
+    "        f.write('group\\n')\n",
+    "        f.close()\n",
+    "\n",
+    "        model, m2l_data = GeologicalModel.from_map2loop_directory(test_data_path,\n",
+    "                                                              skip_faults=True,\n",
+    "                                                              fault_params=fault_params,\n",
+    "                                                              foliation_params=foliation_params)\n",
+    "    else:\n",
+    "        model, m2l_data = GeologicalModel.from_map2loop_directory(test_data_path,\n",
     "                                                              skip_faults=False,\n",
     "                                                              fault_params=fault_params,\n",
     "                                                              foliation_params=foliation_params)\n",
-    "  \n",
+    "\n",
     "    view = LavaVuModelViewer(model,vertical_exaggeration=1) \n",
     "    view.nsteps = np.array([200,200,200])\n",
     "    #view.set_zscale(2)\n",
@@ -2144,9 +2174,14 @@
    "source": [
     "if(workflow['model_engine']=='loopstructural'):  \n",
     "    dtm = rasterio.open(dtm_reproj_file)\n",
-    "    f_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fault'])]\n",
-    "    m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,use_topo=True)\n",
-    "    dtm.close()"
+    "    if(os.path.exists(fault_file)):\n",
+    "        f_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fault'])]\n",
+    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,use_topo=True,use_faults=True)\n",
+    "    else:\n",
+    "        f_clip=[]\n",
+    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,use_topo=True,use_faults=False)\n",
+    "\n",
+    "    dtm.close()\n"
    ]
   },
   {
