Update last rectangle to be Lat/Long to stop bbox creep with reprojection

--- a/notebooks/2. QLD leaflet example.ipynb
+++ b/notebooks/2. QLD leaflet example.ipynb
@@ -127,6 +127,11 @@
     "    minlat=polygon_ll.total_bounds[1]\n",
     "    maxlat=polygon_ll.total_bounds[3]\n",
     "\n",
+    "    minlong=minx\n",
+    "    maxlong=maxx\n",
+    "    minlat=miny\n",
+    "    maxlat=maxy\n",
+    "\n",
     "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
     "    lon_point_list = [minlong, maxlong, maxlong, minlong, minlong]\n",
     "    bbox_geom = Polygon(zip(lon_point_list, lat_point_list))\n",
@@ -245,7 +250,7 @@
     "    f=open('../qld_src_data/last_area2.csv','w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
-    "    ostr=str(mbbox.total_bounds[0])+','+str(mbbox.total_bounds[1])+','+str(mbbox.total_bounds[2])+','+str(mbbox.total_bounds[3])+'\\n'\n",
+    "    ostr=str(minlong)+','+str(minlat)+','+str(maxlong)+','+str(maxlat)+'\\n'\n",
     "    f.write(ostr)\n",
     "    f.close()\n",
     "   \n",
