--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -125,6 +125,11 @@
     "    maxlong=polygon_ll.total_bounds[2]\n",
     "    minlat=polygon_ll.total_bounds[1]\n",
     "    maxlat=polygon_ll.total_bounds[3]\n",
+    "    \n",
+    "    minlong=minx\n",
+    "    maxlong=maxx\n",
+    "    minlat=miny\n",
+    "    maxlat=maxy\n",
     "\n",
     "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
     "    lon_point_list = [minlong, maxlong, maxlong, minlong, minlong]\n",
@@ -243,7 +248,7 @@
     "    f=open('../scratch/last_area.csv','w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
-    "    ostr=str(mbbox.total_bounds[0])+','+str(mbbox.total_bounds[1])+','+str(mbbox.total_bounds[2])+','+str(mbbox.total_bounds[3])+'\\n'\n",
+    "    ostr=str(minlong)+','+str(minlat)+','+str(maxlong)+','+str(maxlat)+'\\n'\n",
     "    f.write(ostr)\n",
     "    f.close()\n",
     "    "
