--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -1226,12 +1226,6 @@
     "structure_clip = structure_code[is_bed]\n",
     "structure_clip.crs = dst_crs\n",
     "\n",
-    "if(workflow['fold_axial_traces'] and os.path.exists(fault_file)):\n",
-    "    folds_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fold'])]\n",
-    "    folds_clip.crs = dst_crs\n",
-    "    if(len(folds_clip)>0):\n",
-    "        folds_clip.to_file(tmp_path+'folds_clip.shp')\n",
-    "\n",
     "\n",
     "if(c_l['dd']=='strike'):\n",
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
@@ -1849,15 +1843,16 @@
    "outputs": [],
    "source": [
     "if(workflow['fold_axial_traces']   and  os.path.exists(fold_file)):\n",
+    "    folds_clip = gpd.read_file(fold_file)\n",
     "    if(len(folds_clip)>0):\n",
-    "\n",
-    "        m2l_geometry.save_fold_axial_traces(tmp_path+'folds_clip.shp',output_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,fold_decimate)\n",
+    "        \n",
+    "        m2l_geometry.save_fold_axial_traces(fold_file,output_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,fold_decimate)\n",
     "\n",
     "        #Save fold axial trace near-hinge orientations\n",
     "        fat_step=750         # how much to step out normal to fold axial trace\n",
     "        close_dip=-999       #dip to assign to all new orientations (-999= use local interpolated dip)\n",
     "\n",
-    "        m2l_geometry.save_fold_axial_traces_orientations(tmp_path+'folds_clip.shp',output_path,tmp_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,\n",
+    "        m2l_geometry.save_fold_axial_traces_orientations(fold_file,output_path,tmp_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,\n",
     "                                                         fold_decimate,fat_step,close_dip,scheme,bbox,spacing,dip_grid,dip_dir_grid)\n"
    ]
   },
