--- a/notebooks/2. QLD map processing.ipynb
+++ b/notebooks/2. QLD map processing.ipynb
@@ -1011,7 +1011,7 @@
     "scrolled": false
    },
    "source": [
-    "## Clip geology, faults, structures and map geology to structures"
+    "## Join geology and structures, save fold axial traces"
    ]
   },
   {
@@ -1045,12 +1045,6 @@
     "    \n",
     "structure_clip = structure_code[is_bed]\n",
     "structure_clip.crs = dst_crs\n",
-    "\n",
-    "if(workflow['fold_axial_traces'] and os.path.exists(fault_file)):\n",
-    "    folds_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fold'])]\n",
-    "    folds_clip.crs = dst_crs\n",
-    "    if(len(folds_clip)>0):\n",
-    "        folds_clip.to_file(tmp_path+'folds_clip.shp')\n",
     "\n",
     "\n",
     "if(c_l['dd']=='strike'):\n",
@@ -1658,15 +1652,16 @@
    "outputs": [],
    "source": [
     "if(workflow['fold_axial_traces']   and  os.path.exists(fold_file)):\n",
+    "    folds_clip = gpd.read_file(fold_file)\n",
     "    if(len(folds_clip)>0):\n",
-    "\n",
-    "        m2l_geometry.save_fold_axial_traces(tmp_path+'folds_clip.shp',output_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,fold_decimate)\n",
+    "        \n",
+    "        m2l_geometry.save_fold_axial_traces(fold_file,output_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,fold_decimate)\n",
     "\n",
     "        #Save fold axial trace near-hinge orientations\n",
     "        fat_step=750         # how much to step out normal to fold axial trace\n",
     "        close_dip=-999       #dip to assign to all new orientations (-999= use local interpolated dip)\n",
     "\n",
-    "        m2l_geometry.save_fold_axial_traces_orientations(tmp_path+'folds_clip.shp',output_path,tmp_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,\n",
+    "        m2l_geometry.save_fold_axial_traces_orientations(fold_file,output_path,tmp_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,\n",
     "                                                         fold_decimate,fat_step,close_dip,scheme,bbox,spacing,dip_grid,dip_dir_grid)\n"
    ]
   },
