Update requirements and install for ipyfilechooser

--- a/notebooks/0. Config file generator.ipynb
+++ b/notebooks/0. Config file generator.ipynb
@@ -10,7 +10,7 @@
     "   \n",
     "1. It first gets the project name and destination projection system (as EPSG number)\n",
     "2. then asks for the paths to the different shape files (for WFS you will have to edit this manually afterwards)   \n",
-    "3. Finally for each input file, you have to defien which fields to use, and which keyords to look for in some of these fields   "
+    "3. Finally for each input file, you have to define which fields to use, and which keyords to look for in some of these fields   "
    ]
   },
   {
