Update to cofig file generator

--- a/notebooks/0. Config file generator.ipynb
+++ b/notebooks/0. Config file generator.ipynb
@@ -8,14 +8,15 @@
     "<img src='../graphics/loop_sm.png'>\n",
     "This simple notebook provides a tool for generating map2loop config files, one of the more annoying parts of the process.\n",
     "   \n",
-    "1. It first gets the project name and destination projection system (as EPSG number)\n",
-    "2. then asks for the paths to the different shape files (for WFS you will have to edit this manually afterwards)   \n",
-    "3. Finally for each input file, you have to define which fields to use, and which keyords to look for in some of these fields   \n",
+    "1. It first gets the project name and destination projection system (as EPSG number)   \n",
     "   \n",
-    "\n",
-    "Finally, make a copy of the <a href=\"0.%20Generic%20config%20file.ipynb\" target=\"_blank\">0. Generic config file notebook</a> and update the **test_data_name** parameter\n",
+    "2. It then asks for the paths to the different shape files (for WFS you will have to edit this manually afterwards)   \n",
     "   \n",
-    "Lots of the parameters not related to the GIS layers are hard-wired by this notebook, but can be easily overridden in the notebooks and are much less fiddly."
+    "3. Finally for each input file, you have to define which fields to use, and which keywords to look for in some of these fields   \n",
+    "     \n",
+    "4. Finally, make a copy of the <a href=\"0.%20Generic%20config%20file.ipynb\" target=\"_blank\">0. Generic config file notebook</a> and update the **test_data_name** parameter   \n",
+    "   \n",
+    "Lots of the parameters not related to the GIS layers are hard-wired by this notebook, but can be easily overridden in the notebooks and are much less fiddly to deal with."
    ]
   },
   {
@@ -196,11 +197,11 @@
     "display(fold_file_m)\n",
     "\n",
     "geology_file_m = FileChooser('../')\n",
-    "geology_file_m.title = '<b>Choose Geology Polygon file</b>'\n",
+    "geology_file_m.title = '<b>Choose Geology polygon file</b>'\n",
     "display(geology_file_m)\n",
     "\n",
     "mindep_file_m = FileChooser('../')\n",
-    "mindep_file_m.title = '<b>Choose Mineral Deposit file</b>'\n",
+    "mindep_file_m.title = '<b>Choose Mineral Deposit point file</b>'\n",
     "display(mindep_file_m)\n",
     "\n"
    ]
@@ -246,7 +247,7 @@
     "    display(structure.head())\n",
     "\n",
     "printmd('**Based on file: '+structure_file+'**')\n",
-    "printmd('\\n**Field that contas unique id of structure point**')\n",
+    "printmd('\\n**Field that contains unique id of structure point**')\n",
     "gi_choice=widgets.Dropdown(\n",
     "    options=structure.columns,\n",
     "    description='Unique ID',\n",
@@ -255,7 +256,7 @@
     ")\n",
     "display(gi_choice)\n",
     "\n",
-    "printmd('**Field that contains information on type of structure**')\n",
+    "printmd('**Field that contains information on type of structure (e.g. bedding, cleavage etc.)**')\n",
     "\n",
     "sf_choice=widgets.Dropdown(\n",
     "    options=structure.columns,\n",
@@ -283,7 +284,7 @@
     ")\n",
     "display(d_choice)\n",
     "\n",
-    "printmd('**Field that contains dip direction information**')\n",
+    "printmd('**Field that contains dip direction or strike information**')\n",
     "\n",
     "dd_choice=widgets.Dropdown(\n",
     "    options=structure.columns,\n",
@@ -301,7 +302,7 @@
     ")\n",
     "display(otype_choice)\n",
     "\n",
-    "printmd('**Field that contains polarity of foliation**')\n",
+    "printmd('**Field that contains polarity of foliation (upward facing or not)**')\n",
     "\n",
     "bo_choice=widgets.Dropdown(\n",
     "    options=structure.columns,\n",
@@ -342,7 +343,7 @@
     "    display(fault.head())\n",
     "printmd('**Based on file: '+fault_file+'**')\n",
     "\n",
-    "printmd('\\n**Field that contains information on type of structure**')\n",
+    "printmd('\\n**Field that contains information on type of structure (fault, fold axial trace etc.)**')\n",
     "\n",
     "\n",
     "f_choice=widgets.Dropdown(\n",
@@ -371,7 +372,7 @@
     ")\n",
     "display(fdip_choice)\n",
     "\n",
-    "printmd('**Text to search for in field defined by fdip to show that this has no known dip**')\n",
+    "printmd('**Text to search for in field defined by Dip to show that this has no known dip**')\n",
     "\n",
     "fdipnull_choice=widgets.Text(\n",
     "    placeholder='0',\n",
@@ -381,7 +382,7 @@
     ")\n",
     "display(fdipnull_choice)\n",
     "\n",
-    "printmd('**Field for text fault dip direction value**')\n",
+    "printmd('**Field for text fault dip direction value (southeast etc.)**')\n",
     "\n",
     "fdipdir_choice=widgets.Dropdown(\n",
     "    options=fault.columns,\n",
@@ -400,7 +401,7 @@
     ")\n",
     "display(fdipdir_flag_choice)\n",
     "\n",
-    "printmd('**Field for text fault dip estimate value**')\n",
+    "printmd('**Field for text fault dip estimate value (Moderate, Steep etc.)**')\n",
     "\n",
     "fdipest_choice=widgets.Dropdown(\n",
     "    options=fault.columns,\n",
@@ -453,7 +454,7 @@
     "    display(fold.head())\n",
     "printmd('**Based on file:'+' '+fault_file+'**')\n",
     "\n",
-    "printmd('\\n**Field that contains information on type of structure**')\n",
+    "printmd('\\n**Field that contains information on type of structure (fold, fault etc.)**')\n",
     "\n",
     "ff_choice=widgets.Dropdown(\n",
     "    options=fold.columns,\n",
@@ -462,7 +463,7 @@
     ")\n",
     "display(ff_choice)\n",
     "\n",
-    "printmd('**Text to search for in field defined by ff code to show that this is a fold axial trace**')\n",
+    "printmd('**Text to search for in field defined by Fold field to show that this is a fold axial trace**')\n",
     "\n",
     "fold_choice=widgets.Text(\n",
     "    placeholder='Fold',\n",
@@ -472,7 +473,7 @@
     ")\n",
     "display(fold_choice)\n",
     "\n",
-    "printmd('**Field that contains information on type of fold**')\n",
+    "printmd('**Field that contains information on type of fold (anticline, syncline)**')\n",
     "\n",
     "t_choice=widgets.Dropdown(\n",
     "    options=fold.columns,\n",
@@ -481,7 +482,7 @@
     ")\n",
     "display(t_choice)\n",
     "\n",
-    "printmd('**Text to search for in field defined by t to show that this is a syncline**')\n",
+    "printmd('**Text to search for in field defined by Polarity Field to show that this is a syncline**')\n",
     "\n",
     "syn_choice=widgets.Text(\n",
     "    placeholder='syn',\n",
@@ -519,6 +520,15 @@
     ")\n",
     "display(o_choice)\n",
     "\n",
+    "printmd('**Field that contains finer stratigraphic coding**')\n",
+    "\n",
+    "c_choice=widgets.Dropdown(\n",
+    "    options=geology.columns,\n",
+    "    description='Formation',\n",
+    "    disabled=False\n",
+    ")\n",
+    "display(c_choice)\n",
+    "\n",
     "printmd('\\n**Field that contains coarser stratigraphic coding**')\n",
     "\n",
     "g_choice=widgets.Dropdown(\n",
@@ -537,23 +547,6 @@
     ")\n",
     "display(g2_choice)\n",
     "\n",
-    "printmd('**Field that contains finer stratigraphic coding**')\n",
-    "\n",
-    "c_choice=widgets.Dropdown(\n",
-    "    options=geology.columns,\n",
-    "    description='Formation',\n",
-    "    disabled=False\n",
-    ")\n",
-    "display(c_choice)\n",
-    "\n",
-    "printmd('**Field that contains information about lithology**')\n",
-    "\n",
-    "ds_choice=widgets.Dropdown(\n",
-    "    options=geology.columns,\n",
-    "    description='Description:',\n",
-    "    disabled=False\n",
-    ")\n",
-    "display(ds_choice)\n",
     "\n",
     "printmd('**Field that contains alternate stratigraphic coding (not used??)**')\n",
     "\n",
@@ -563,6 +556,15 @@
     "    disabled=False\n",
     ")\n",
     "display(u_choice)\n",
+    "\n",
+    "printmd('**Field that contains information about lithology**')\n",
+    "\n",
+    "ds_choice=widgets.Dropdown(\n",
+    "    options=geology.columns,\n",
+    "    description='Description:',\n",
+    "    disabled=False\n",
+    ")\n",
+    "display(ds_choice)\n",
     "\n",
     "printmd('**Field that contains extra lithology information**')\n",
     "\n",
@@ -582,7 +584,7 @@
     ")\n",
     "display(r2_choice)\n",
     "\n",
-    "printmd('**Text to search for in field defined by ds code to show that this is a sill**')\n",
+    "printmd('**Text to search for in field defined by Description code to show that this is a sill**')\n",
     "\n",
     "sill_choice=widgets.Text(\n",
     "    placeholder='sill',\n",
@@ -592,7 +594,7 @@
     ")\n",
     "display(sill_choice)\n",
     "\n",
-    "printmd('**Text to search for in field defined by r1 code to show that this is an intrusion**')\n",
+    "printmd('**Text to search for in field defined by Litho code to show that this is an intrusion**')\n",
     "\n",
     "intrusive_choice=widgets.Text(\n",
     "    placeholder='intrusive',\n",
@@ -602,7 +604,7 @@
     ")\n",
     "display(intrusive_choice)\n",
     "\n",
-    "printmd('**Text to search for in field defined by ds code to show that this is an volcanic (not intrusion)**')\n",
+    "printmd('**Text to search for in field defined by Description code to show that this is an volcanic (not intrusion)**')\n",
     "\n",
     "\n",
     "volcanic_choice=widgets.Text(\n",
@@ -668,7 +670,7 @@
     ")\n",
     "display(msc_choice)\n",
     "\n",
-    "printmd('**Field that contains short name of deposit**')\n",
+    "printmd('**Field that contains short name of deposit (e.g. Jones deposit)**')\n",
     "\n",
     "msn_choice=widgets.Dropdown(\n",
     "    options=mindep.columns,\n",
@@ -677,7 +679,7 @@
     ")\n",
     "display(msn_choice)\n",
     "\n",
-    "printmd('**Field that contains site type of deposit**')\n",
+    "printmd('**Field that contains site type of deposit (Mine, occurrence etc.)**')\n",
     "\n",
     "mst_choice=widgets.Dropdown(\n",
     "    options=mindep.columns,\n",
@@ -686,7 +688,7 @@
     ")\n",
     "display(mst_choice)\n",
     "\n",
-    "printmd('**Field that contains target commodity of deposit**')\n",
+    "printmd('**Field that contains target commodity of deposit (Commodity)**')\n",
     "\n",
     "mtc_choice=widgets.Dropdown(\n",
     "    options=mindep.columns,\n",
@@ -695,7 +697,7 @@
     ")\n",
     "display(mtc_choice)\n",
     "\n",
-    "printmd('**Field that contains site commodity of deposit**')\n",
+    "printmd('**Field that contains site commodity of deposit (ore Mineral)**')\n",
     "\n",
     "mscm_choice=widgets.Dropdown(\n",
     "    options=mindep.columns,\n",
@@ -704,7 +706,7 @@
     ")\n",
     "display(mscm_choice)\n",
     "\n",
-    "printmd('**Field that contains commodity group of deposit**')\n",
+    "printmd('**Field that contains commodity group of deposit (e.g. Metal)**')\n",
     "\n",
     "mcom_choice=widgets.Dropdown(\n",
     "    options=mindep.columns,\n",
