Added null_mindeps.shp option

--- a/notebooks/0. Config file generator.ipynb
+++ b/notebooks/0. Config file generator.ipynb
@@ -58,13 +58,13 @@
     "  \"intrusive\": 'intrusive',    #text to search for in field defined by r1 code to show that this is an intrusion\n",
     "  \"volcanic\": 'volcanic',      #text to search for in field defined by ds code to show that this is an volcanic (not intrusion)\n",
     "#mineral deposits\n",
-    "  \"msc\": 'occurrence',          #field that contains site code of deposit\n",
-    "  \"msn\": 'deposit_na',         #field that contains short name of deposit\n",
-    "  \"mst\": 'comm_type',         #field that contains site type of deposit\n",
-    "  \"mtc\": 'major_comm',         #field that contains target commodity of deposit\n",
-    "  \"mscm\": 'ore_min',        #field that contains site commodity of deposit\n",
-    "  \"mcom\": 'comm_type',        #field that contains commodity group of deposit\n",
-    "  \"minf\": 'CONSTR',    #text to search for in field defined by mst code that shows site to ignore\n",
+    "  \"msc\": 'SITE_CODE',          #field that contains site code of deposit\n",
+    "  \"msn\": 'SHORT_NAME',         #field that contains short name of deposit\n",
+    "  \"mst\": 'SITE_TYPE_',         #field that contains site type of deposit\n",
+    "  \"mtc\": 'TARGET_COM',         #field that contains target commodity of deposit\n",
+    "  \"mscm\": 'SITE_COMMO',        #field that contains site commodity of deposit\n",
+    "  \"mcom\": 'COMMODITY_',        #field that contains commodity group of deposit\n",
+    "  \"minf\": 'Infrastructure',    #text to search for in field defined by mst code that shows site to ignore\n",
     "#timing\n",
     "  \"min\": 'top_end_ag',         #field that contains minimum age of unit defined by ccode\n",
     "  \"max\": 'base_start',         #field that contains maximum age of unit defined by ccode\n",
@@ -201,7 +201,7 @@
     "display(geology_file_m)\n",
     "\n",
     "mindep_file_m = FileChooser('../')\n",
-    "mindep_file_m.title = '<b>Choose Mineral Deposit point file</b>'\n",
+    "mindep_file_m.title = '<b>Choose Mineral Deposit point file (or use null_mindeps.shp from source_data directory, and use default settings below for this file)</b>'\n",
     "display(mindep_file_m)\n",
     "\n"
    ]
@@ -655,76 +655,77 @@
     "c_l['min']=min_choice.value\n",
     "c_l['max']=max_choice.value\n",
     "\n",
-    "if(not mindep_file==''):\n",
-    "    mindep=gpd.read_file(mindep_file)\n",
-    "    display(mindep.head())\n",
-    "    \n",
-    "printmd('**Based on file:'+' '+mindep_file+'**')\n",
+    "if(not mindep_file_m.selected_filename == 'null_mindep.shp'):\n",
+    "    if(not mindep_file==''):\n",
+    "        mindep=gpd.read_file(mindep_file)\n",
+    "        display(mindep.head())\n",
     "\n",
-    "printmd('\\n**Field that contains site code of deposit**')\n",
+    "    printmd('**Based on file:'+' '+mindep_file+'**')\n",
     "\n",
-    "msc_choice=widgets.Dropdown(\n",
-    "    options=mindep.columns,\n",
-    "    description='Site code',\n",
-    "    disabled=False\n",
-    ")\n",
-    "display(msc_choice)\n",
+    "    printmd('\\n**Field that contains site code of deposit**')\n",
     "\n",
-    "printmd('**Field that contains short name of deposit (e.g. Jones deposit)**')\n",
+    "    msc_choice=widgets.Dropdown(\n",
+    "        options=mindep.columns,\n",
+    "        description='Site code',\n",
+    "        disabled=False\n",
+    "    )\n",
+    "    display(msc_choice)\n",
     "\n",
-    "msn_choice=widgets.Dropdown(\n",
-    "    options=mindep.columns,\n",
-    "    description='Name',\n",
-    "    disabled=False\n",
-    ")\n",
-    "display(msn_choice)\n",
+    "    printmd('**Field that contains short name of deposit (e.g. Jones deposit)**')\n",
     "\n",
-    "printmd('**Field that contains site type of deposit (Mine, occurrence etc.)**')\n",
+    "    msn_choice=widgets.Dropdown(\n",
+    "        options=mindep.columns,\n",
+    "        description='Name',\n",
+    "        disabled=False\n",
+    "    )\n",
+    "    display(msn_choice)\n",
     "\n",
-    "mst_choice=widgets.Dropdown(\n",
-    "    options=mindep.columns,\n",
-    "    description='Site type',\n",
-    "    disabled=False\n",
-    ")\n",
-    "display(mst_choice)\n",
+    "    printmd('**Field that contains site type of deposit (Mine, occurrence etc.)**')\n",
     "\n",
-    "printmd('**Field that contains target commodity of deposit (Commodity)**')\n",
+    "    mst_choice=widgets.Dropdown(\n",
+    "        options=mindep.columns,\n",
+    "        description='Site type',\n",
+    "        disabled=False\n",
+    "    )\n",
+    "    display(mst_choice)\n",
     "\n",
-    "mtc_choice=widgets.Dropdown(\n",
-    "    options=mindep.columns,\n",
-    "    description='Major Comm',\n",
-    "    disabled=False\n",
-    ")\n",
-    "display(mtc_choice)\n",
+    "    printmd('**Field that contains target commodity of deposit (Commodity)**')\n",
     "\n",
-    "printmd('**Field that contains site commodity of deposit (ore Mineral)**')\n",
+    "    mtc_choice=widgets.Dropdown(\n",
+    "        options=mindep.columns,\n",
+    "        description='Major Comm',\n",
+    "        disabled=False\n",
+    "    )\n",
+    "    display(mtc_choice)\n",
     "\n",
-    "mscm_choice=widgets.Dropdown(\n",
-    "    options=mindep.columns,\n",
-    "    description='Ore Min',\n",
-    "    disabled=False\n",
-    ")\n",
-    "display(mscm_choice)\n",
+    "    printmd('**Field that contains site commodity of deposit (ore Mineral)**')\n",
     "\n",
-    "printmd('**Field that contains commodity group of deposit (e.g. Metal)**')\n",
+    "    mscm_choice=widgets.Dropdown(\n",
+    "        options=mindep.columns,\n",
+    "        description='Ore Min',\n",
+    "        disabled=False\n",
+    "    )\n",
+    "    display(mscm_choice)\n",
     "\n",
-    "mcom_choice=widgets.Dropdown(\n",
-    "    options=mindep.columns,\n",
-    "    description='Commodity Group',\n",
-    "    disabled=False,\n",
-    "    style=style\n",
-    ")\n",
-    "display(mcom_choice)\n",
+    "    printmd('**Field that contains commodity group of deposit (e.g. Metal)**')\n",
     "\n",
-    "printmd('**Text to search for in field defined by Site type code that shows site to ignore**')\n",
+    "    mcom_choice=widgets.Dropdown(\n",
+    "        options=mindep.columns,\n",
+    "        description='Commodity Group',\n",
+    "        disabled=False,\n",
+    "        style=style\n",
+    "    )\n",
+    "    display(mcom_choice)\n",
     "\n",
-    "minf_choice=widgets.Text(\n",
-    "    placeholder='Cons',\n",
-    "    value='Cons',\n",
-    "    description='Not mine text',\n",
-    "    disabled=False\n",
-    ")\n",
-    "display(minf_choice)\n"
+    "    printmd('**Text to search for in field defined by Site type code that shows site to ignore**')\n",
+    "\n",
+    "    minf_choice=widgets.Text(\n",
+    "        placeholder='Cons',\n",
+    "        value='Cons',\n",
+    "        description='Not mine text',\n",
+    "        disabled=False\n",
+    "    )\n",
+    "    display(minf_choice)\n"
    ]
   },
   {
