Update 0. Config file generator.ipynb

--- a/notebooks/0. Config file generator.ipynb
+++ b/notebooks/0. Config file generator.ipynb
@@ -201,7 +201,7 @@
     "display(geology_file_m)\n",
     "\n",
     "mindep_file_m = FileChooser('../')\n",
-    "mindep_file_m.title = '<b>Choose Mineral Deposit point file (or use null_mindeps.shp from source_data directory, and use default settings below for this file)</b>'\n",
+    "mindep_file_m.title = '<b>Choose Mineral Deposit point file (or use null_mindeps.shp from source_data directory)</b>'\n",
     "display(mindep_file_m)\n",
     "\n"
    ]
