Update 0. Config file generator.ipynb

--- a/notebooks/0. Config file generator.ipynb
+++ b/notebooks/0. Config file generator.ipynb
@@ -655,7 +655,7 @@
     "c_l['min']=min_choice.value\n",
     "c_l['max']=max_choice.value\n",
     "\n",
-    "if(not mindep_file_m.selected_filename == 'null_mindep.shp'):\n",
+    "if(not mindep_file_m.selected_filename == 'null_mindeps.shp'):\n",
     "    if(not mindep_file==''):\n",
     "        mindep=gpd.read_file(mindep_file)\n",
     "        display(mindep.head())\n",
